--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>Hello</h1>
+        <h2>Cool</h2>
+        <h3>No Body</h3>
+        <p>The First Thing Is</p>
     </body>
 </html>
