--- a/back/index.html
+++ b/back/index.html
@@ -63,14 +63,18 @@
                 <!--Table List-->
                 <table>
                     <tr>
-                        <td>
+                        <td class="td-i">
                             <div class="circle-container"><i class="fa fa-comment"></i></div>
+                        </td>
+                        <td class="td-word">
                             <h4>Mattis velit diam vulputate</h4>
                             <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
                             <hr>
                         </td>
-                        <td>
+                        <td class="td-i">
                             <div class="circle-container"><i class="fa fa-refresh"></i></div>
+                        </td>
+                        <td class="td-word">
                             <h4>Lorem ipsum dolor sit veroeros</h4>
                             <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
                             <hr>
