--- a/back/index.html
+++ b/back/index.html
@@ -106,6 +106,57 @@
                 <button id="more-info" class="general-button">More Info</button>
             </div>
         </section>
+
+        <!--Fourth Section 'THE ENDORSEMENTS'-->
+        <section class="endors">
+            <!--Section Head-->
+            <div class="sec-head"><span>the ENDORSEMENTS</span></div>
+            <div class="container">
+                <table id="endors-table">
+                    <tr>
+                        <td>
+                            <figure>
+                                <img src="images/pic02.jpg" alt="image"/>
+                                <figcaption><a href="">Aliquam diam consequat</a></figcaption>
+                                <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+                                <button class="general-button learn-more-button">learn more</button>
+                            </figure>
+                        </td>
+                        <td>
+                            <figure>
+                                <img src="images/pic03.jpg" alt="image"/>
+                                <figcaption><a href="">Nisl adipiscing sed lorem</a></figcaption>
+                                <P>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</P>
+                                <button class="general-button learn-more-button">learn more</button>
+                            </figure>
+                        </td>
+                        <td>
+                            <figure>
+                                <img src="images/pic04.jpg" alt="image">
+                                <figcaption><a href="">Mattis tempus lorem</a></figcaption>
+                                <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+                                <button class="general-button learn-more-button">learn more</button>
+                            </figure>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+
+        <!--Fifth Section 'The Rest Of It'-->
+        <section class="rest-Ofit">
+            <div class="sec-head"><span>the rest of it</span></div>
+            <div class="container">
+                <h1>Ipsum sapien elementum portitor?</h1>
+                <p>Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br>Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.</p>
+                <hr>
+                <form action="">
+                    <input type="text" placeholder="Name"/>
+                    <input type="email" placeholder="Email"/>
+                    <textarea placeholder="Message"></textarea>
+                </form>
+            </div>
+        </section>
         
     </body>
 </html>
