--- a/back/index.html
+++ b/back/index.html
@@ -151,10 +151,61 @@
                 <p>Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br>Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.</p>
                 <hr>
                 <form action="">
-                    <input type="text" placeholder="Name"/>
-                    <input type="email" placeholder="Email"/>
-                    <textarea placeholder="Message"></textarea>
+                    <input type="text" placeholder="   Name"/>
+                    <input type="email" placeholder="   Email"/>
+                    <textarea placeholder="   Message"></textarea>
+                    <input type="submit" class="general-button form-button" value="send"/>
+                    <input type="reset" class="general-button form-button"/>
                 </form>
+                
+                <div id="contact-info">
+                    <section>
+                        <div class="contact-list-items">
+                            <i class="fa fa-home"></i>
+                            <h4>Mailing Address</h4>
+                            <span>Untitled Corporation</span>
+                            <span>1234 Somewhere Rd </span>
+                            <span>#987</span>
+                            <span>Nashville, TN 00000-</span>
+                            <span>0000</span>
+                        </div>
+                        <div class="contact-list-items rightDiv-get-margin-left">
+                            <i class="fa fa-comment"></i>
+                            <h4>Social</h4>
+                            <span><a href="" class="special-link">@untitled-corp</a></span>
+                            <span><a href="" class="special-link">linkedin.com/untitled</a></span>
+                            <span><a href="" class="special-link">facebook.com/untitled</a></span>
+                        </div>
+                    </section>
+                    <div class="clear"></div>
+                    <section id="hr-maker2">
+                        <div class="contact-list-items hr-maker2">
+                            <hr>
+                        </div>
+                        <div class="contact-list-items rightDiv-get-margin-left hr-maker2">
+                            <hr>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="contact-list-items">
+                            <i class="fa fa-envelope"></i>
+                            <h4>Email</h4>
+                            <span><a href="" class="special-link">info@untitled.tld</a></span>
+                        </div>
+                        <div class="contact-list-items rightDiv-get-margin-left">
+                            <i class="fa fa-phone"></i>
+                            <h4>Phone</h4>
+                            <span>(000) 555-0000</span>
+                        </div>    
+                    </section>
+                    <div class="clear"></div>
+                </div>
+                <div class="clear"></div>
+                <hr>
+                <div id="copyright-st">
+                    <h5>© Untitled</h5>
+                    <h5>Design:</h5><span><a href="">HTML5 UP</a></span>
+                </div>
             </div>
         </section>
         
